# GameAISDK

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  requirements.txt  requirements_SDKTool.txt
Modules/Json/jsoncpp-master/: README.md  build.sh  conanfile.txt  conaninfo.txt  test.json
Modules/RefineDet/: detect.py  detect_mutilple_images.py  detect_one_image.py  detectmap.py  train_val.py
Modules/darknetV3-win/src/: ObjDet.h  YOLODetWrapper.cpp  YOLODetWrapperV3.cpp  YOLODetWrapperV3_CPU.cpp  YOLODetWrapperV3_GPU.cpp  YOLOV2Det.cpp  YOLOV2Det.h  YOLOV3Det.cpp  YOLOV3Det.h  darknet.c  dropout_layer.c  layer.c  layer.h  parser.c  yolo_console_dll.cpp  yolo_v2_class.cpp  yolo_v2_class.hpp
Modules/darknetV3/include/: darknet.h
Modules/darknetV3/src/: InstallYoloV3.sh  Makefile_CPU  Makefile_GPU  command  test.txt  voc_eval.py
Modules/python3.6/libs/: _tkinter.lib  python3.lib  python36.lib
Modules/server/rainbow/: main.py  requirements.txt
Modules/tbus/libtbus/: make_tbus.sh
cfg/platform/: AgentLog.ini  GameReg.ini  IO.ini  IOLog.ini  MC.ini  MCLog.ini  UI.ini  bus.ini
cfg/task/agent/: DQNAction.json  DQNEnv.ini  DQNLearn.ini  ImitationAction.json  ImitationLearning.json
cfg/task/gameReg/: GameRegMgr1.json  Refer.json  Task.json
cfg/task/ui/: UIConfig.json
data/ImitationModel/: my_model_weights.h5  my_model_weights_LSTM.h5
doc/2nddev/: DevelopAI.md  DevelopImgProc.md  TaskRecognitionResults.md
doc/SDKTool/: ActionConf.md  AndroidConnect.md  Get_started_quickly.md  IMActionAndroid.md  IMActionwindows.md  Rainbow_Server.md  TaskConf.md  UIAutoExplore.md  UIConf.md  WinAndroidConnect.md  versionConfigConvert.md
doc/YOLO/: TrainDetModel.md
doc/developer/: AI SDK_Windows_install.docx  c_c++.doc  python.docx
doc/dockerdeployment/: BaseInstall.md  UseGuide.md
doc/environment/: AIClientEnv.md  InstallStepByStep.md  MacDockerInstall.md  SDKAutoInstallToolEnv.md  SDKToolEnv.md  WinDockerInstall.md  WindowsStep.md
doc/opt/: FAQ.md  Opt.md  Run_Mutli_SDK.md
doc/project/: AIClientDownload.md  AISDKCompile.md  AISDKCompileWin.md  AISDKDownload.md  APKDownLoad.md  CollectionTypes.md  DQNConf.md  IMConf.md  ProjectDQNTrain.md  ProjectIMTrain.md  ProjectLocalRun.md  ProjectLocalRunLinux.md  ProjectLocalRunWin.md  ProjectRainBowTrain.md  ProjectTaskConf.md  ProjectUIConfig.md  QuickStartLocalRunLinux.md  QuickStartLocalRunWin.md  Rainbow_Server.md
protocol/: common.proto  gameregProtoc.proto  gen_pb.bat
src/AgentAI/: agentai.py
src/IOService/: io_service.py
src/ImgProc/: Makefile.am  beautify.sh  configure.ac
src/ImgProc/Comm/ImgReg/ImgProcess/: CColorBinMatch.cpp  CColorBinMatch.h  CColorDet.cpp  CColorDet.h  CColorMatch.cpp  CColorMatch.h  CEdgeMatch.cpp  CEdgeMatch.h  CGradMatch.cpp  CGradMatch.h  CORBMatch.cpp  CORBMatch.h  CObjDet.cpp  CObjDet.h  CYOLOAPI.cpp  CYOLOAPI.h  IImgCls.h  IImgProc.h  IImgSeg.h  IPixDet.h  ImgComn.cpp  ImgComn.h
src/ImgProc/Comm/ImgReg/Recognizer/: CBloodLengthReg.cpp  CBloodLengthReg.h  CDeformBloodReg.cpp  CDeformBloodReg.h  CDeformObjReg.cpp  CDeformObjReg.h  CFixBloodReg.cpp  CFixBloodReg.h  CFixObjReg.cpp  CFixObjReg.h  CKingGloryBloodReg.cpp  CKingGloryBloodReg.h  CLocationReg.cpp  CLocationReg.h  CMapDirectionReg.cpp  CMapDirectionReg.h  CMapReg.cpp  CMapReg.h  CMultColorVarReg.cpp  CMultColorVarReg.h  CNumReg.cpp  CNumReg.h  CPixReg.cpp  CPixReg.h  CShootGameBloodReg.cpp  CShootGameBloodReg.h  CShootGameHurtReg.cpp  CShootGameHurtReg.h  CStuckReg.cpp  CStuckReg.h  IComnBaseReg.h  IImgBaseReg.h  IObjReg.h  IRecognizer.h
src/ImgProc/Comm/Os/: TqcOs.h
src/ImgProc/Comm/Os/Android/: TqcAndroidOs.cpp
src/ImgProc/Comm/Os/Linux/: TqcLinuxOS.cpp
src/ImgProc/Comm/Os/Windows/: TqcWindowsOS.cpp
src/ImgProc/Comm/Utils/: Base64.h  Config.h  Debug.h  GameTime.cpp  GameTime.h  GameTime_i.h  GameUtils.cpp  GameUtils.h  IniConfig.cpp  IniConfig.h  JsonConfig.cpp  JsonConfig.h  Log.cpp  Log.h  Pool.cpp  Pool.h  TSingleton.h  TqcCommon.cpp  TqcCommon.h  TqcLock.cpp  TqcLock.h  TqcLog.h  TqcMemoryPool.cpp  TqcMemoryPool.h  TqcString.cpp  TqcString.h  TqcThreadPool.cpp  TqcThreadPool.h  TqcThreadSafeQueue.h
src/ImgProc/GameRecognize/: Makefile.am
src/ImgProc/GameRecognize/Lib/: libjsoncpp.so.1.8.1
src/ImgProc/GameRecognize/Windows/: GameReg.vcxproj  GameReg.vcxproj.filters
src/ImgProc/GameRecognize/src/: FrameWorkDefine.h  GameRegFrameWork.cpp  GameRegFrameWork.h  IniConfClass.cpp  IniConfClass.h  NetWorkManager.cpp  NetWorkManager.h  SerializeProtobuf.cpp  SerializeProtobuf.h  main.cpp
src/ImgProc/GameRecognize/src/TaskMgr/: TaskContext.cpp  TaskContext.h  TaskDataDeal.cpp  TaskDataDeal.h  TaskDefine.h  TaskManager.cpp  TaskManager.h  TaskMessage.cpp  TaskMessage.h  TaskMultiResMgr.cpp  TaskMultiResMgr.h  TaskResult.cpp  TaskResult.h
src/ImgProc/Projects/Windows/UIRecognize/: SDK.sln  UIRecognize.vcxproj  UIRecognize.vcxproj.filters
src/ImgProc/UI/: Makefile.am
src/ImgProc/UI/Src/: Main.cpp  UIDefine.h  UIFrameWork.cpp  UIFrameWork.h  UITypes.h
src/ImgProc/UI/Src/Action/: Action.cpp  Action.h  SendAction.cpp  SendAction.h
src/ImgProc/UI/Src/Communicate/: DataComm.h  DataManager.cpp  DataManager.h  PBMsgManager.cpp  PBMsgManager.h
src/ImgProc/UI/Src/GameState/: GameOverState.cpp  GameOverState.h  GameRunState.cpp  GameRunState.h  GameStartState.cpp  GameStartState.h  HallState.cpp  HallState.h  UIState.h
src/ImgProc/UI/Src/UICfg/: CommUICfg.cpp  CommUICfg.h  GameOverCfg.cpp  GameOverCfg.h  GameStartCfg.cpp  GameStartCfg.h  HallCfg.cpp  HallCfg.h  POPUICfg.cpp  POPUICfg.h  UICfg.h
src/ImgProc/UI/Src/UIReg/: CommonUIReg.cpp  CommonUIReg.h  GameOverReg.cpp  GameOverReg.h  GameStartReg.cpp  GameStartReg.h  HallReg.cpp  HallReg.h  POPUIReg.cpp  POPUIReg.h  UIReg.h
src/ManageCenter/: manage_center.py
test/: test_io_client.py
tools/: release.bat  release.sh
tools/AIClient_ubuntu16/: demo.py
tools/SDKTool/: Json2DataSet.py  README  SDKTool.py  SDKTool.ui  define.py  main.py  tbus.cp36-win_amd64.pyd
tools/docker/: end_mac_docker.sh  start_mac_docker.sh  start_win_docker.bat
(+578 files in other folders)
